fixed issue where tiles weren't being centered and the tiles were overlapping the borders of the board

--- a/GameHub.Web/ClientApp/src/components/ConnectFour/ConnectFour.css
+++ b/GameHub.Web/ClientApp/src/components/ConnectFour/ConnectFour.css
@@ -5,14 +5,18 @@
 
 .board
 {
-    widows: 100%;
     margin: 0 auto;
     display:"inline-block";
 }
 
 .row
 {
-    margin: 0px 0px 0px 0px;
+    margin: 0 auto;
+}
+
+.tile 
+{
+    margin: 0 auto;
 }
 
 #ConnectFour
